<resources>
    <string name="app_name">Matura Assist</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">fatjoni.com</string>

    <string-array name="koeficientet_array">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
    </string-array>

    <string name="banner_ad_unit_id">ca-app-pub-1837256325017145/3999914617</string>
    <string name="header_title">Llogarit Piket e Matures</string>
    <string name="hint_mesatarja">Nota Mesatare</string>
    <string name="hint_nota_letersise">Nota letersise</string>
    <string name="hint_nota_matematikes">Nota matematikes</string>
    <string name="hint_nota_z1">Nota zgjedhje 1</string>
    <string name="hint_nota_z2">Nota zgjedhje 2</string>
    <string name="hint_koeficienti_z1">Koeficienti i lendes me zgjedhje 1</string>
    <string name="hint_koeficienti_z2">Koeficienti i lendes me zgjedhje 2</string>
    <string name="hint_koeficienti_shkolles">Koeficienti i Shkolles</string>
    <string name="hint_btn_llogarit">Llogarit</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="piket_tuaja">Piket Tuaja:</string>
    <string name="success_message">Suksese! - Beni renditjen e duhur te degeve!</string>
</resources>
