<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.fatjoni.droid.maturaassist.ResultActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.gms.ads.AdView
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:id="@+id/adView2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="66dp"
            android:text="@string/piket_tuaja"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />
        <FrameLayout
            android:id="@+id/v_piket"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/success_message"
            android:textAllCaps="true" />

    </LinearLayout>
</RelativeLayout>